lb/tgb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    name: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      name: nginx
  template:
    metadata:
      labels:
        name: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-targetgroupbinding-svc
spec:
  type: ClusterIP
  selector:
    name: nginx
  ports:
   -  protocol: TCP
      port: 80
      targetPort: 80
